Entity pass